<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TramiAutos</string>
    <string name="info" tools:ignore="Typos">TramiAutos es la compañia que aporta sobre el estado, ajustes, arreglos, seguridad, detalles decorativos, y el mejor cuidado para usted y su vehiculo, venga ya, no se lo pierda hoy.</string>
    <string name="sign_up">REGISTRARSE</string>
    <string name="senasoft">SENASOFT 2020</string>
    <string name="item_1">Integrante 1</string>
    <string name="item_2">Integrante 2</string>
    <string name="logo">logo</string>
    <string name="openDrawer">abrir menu lateral</string>
    <string name="closeDrawer">cerrar menu lateral</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">Ciudad:</string>
    <string name="placa">Placa:</string>
    <string name="color">Color:</string>
    <string name="marca">Marca:</string>
    <string name="form">Formulario</string>
    <string name="f_soat">F. Soat:</string>
    <string name="modelo">Modelo:</string>
    <string name="save">Guardar</string>
    <string name="home">Inicio</string>
    <string name="registry">Registro de vehiculos</string>
    <string name="services">Servicios</string>
    <string name="profile">Mi perfil</string>
    <string name="about" tools:ignore="TypographyEllipsis">Acerca de...</string>
    <string name="exit">Salir</string>
    <string name="select">Seleccione los servicios</string>
    <string name="renovacion">Renovación SOAT</string>
    <string name="revision">Revisión Tecno-mecanica</string>
    <string name="pago">Pago Impuesto Vehicular</string>
    <string name="pico_y_placa">Pico y Placa</string>


    <string-array name="marcas">
        <item>AUDI</item>
        <item>FIAT</item>
        <item>ALFA ROMEO</item>
    </string-array>

    <string-array name="colores">
        <item>AMARILLO</item>
        <item>AZULBEIGE</item>
        <item>BLANCO</item>
        <item>CAFÉ</item>
        <item>GRIS</item>
        <item>MARRON</item>
        <item>MORADO</item>
        <item>NARANJA</item>
        <item>NEGRO</item>
        <item>ROJO</item>
        <item>VERDE</item>
    </string-array>

    <string-array name="ciudades">
        <item>CARTAGO</item>
        <item>CALI</item>
        <item>BOGOTÁ</item>
        <item>MEDELLÍN</item>
        <item>BARRANQUILLA</item>
    </string-array>
</resources>