<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="#d7d7d7"
    tools:context=".fragments.RegistroFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/hwid_auth_button_color_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:text="@string/form" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/label_marca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/marca" />

                <Spinner
                    android:id="@+id/marca"
                    style="@android:style/Widget.Material.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:backgroundTint="@color/primary_text"
                    android:popupBackground="@color/primary_text"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/label_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/color" />

                <Spinner
                    android:id="@+id/color"
                    style="@android:style/Widget.Material.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:backgroundTint="@color/primary_text"
                    android:popupBackground="@color/primary_text"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/label_placa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:layout_gravity="center_vertical"
                    android:text="@string/placa"
                    android:labelFor="@+id/placa"/>

                <EditText
                    android:id="@+id/placa"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="80"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/label_ciudad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/city" />

                <Spinner
                    android:id="@+id/ciudad"
                    style="@android:style/Widget.Material.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:backgroundTint="@color/primary_text"
                    android:popupBackground="@color/primary_text"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/label_modelo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:layout_gravity="center_vertical"
                    android:text="@string/modelo"
                    android:labelFor="@+id/modelo"/>

                <EditText
                    android:id="@+id/modelo"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="80"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:imeOptions="actionNext"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/label_fecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:layout_gravity="center_vertical"
                    android:text="@string/f_soat"
                    android:labelFor="@+id/fecha"/>

                <EditText
                    android:id="@+id/fecha"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="80"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"/>

                <ImageView
                    android:id="@+id/ib_get_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/logo" />
            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border_bottons"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/save"
                android:textColor="#000"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="320dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="210dp"
        android:background="@drawable/border_bottons"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="16dp"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senasoft"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_1"
            android:textSize="18sp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_2"
            android:textSize="18sp"
            android:textColor="#000" />
    </LinearLayout>
</FrameLayout>