<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#d7d7d7"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ServiciosFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/hwid_auth_button_color_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:text="@string/select" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"
                android:baselineAligned="false">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/soat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:layout_marginStart="8dp"
                    android:text="@string/renovacion" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"
                android:baselineAligned="false">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/revision"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:layout_marginStart="8dp"
                    android:text="@string/revision" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"
                android:baselineAligned="false">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/pago"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:layout_marginStart="8dp"
                    android:text="@string/pago" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"
                android:baselineAligned="false">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/pico"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:layout_marginStart="8dp"
                    android:text="@string/pico_y_placa" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="320dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="210dp"
        android:background="@drawable/border_bottons"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senasoft"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_1"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_2"
            android:textSize="18sp"
            android:textColor="#000" />
    </LinearLayout>
</FrameLayout>