<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d7d7d7"
    tools:context=".fragments.PerfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingTop="0dp"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nombres"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_bottons"
            android:hint="Nombre Completo"
            android:clickable="true"
            android:inputType="text"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#000"
            app:layout_constraintBottom_toTopOf="@+id/linear1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:focusable="true" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/nacimiento"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/border_bottons"
                android:hint="Fecha de Nacimiento"
                android:clickable="true"
                android:inputType="date"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="#000"
                android:focusable="false" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:backgroundTint="#000"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_calendar"/>

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/border_bottons"
            android:hint="Correo Electrónico"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            android:clickable="true"
            android:paddingRight="10dp"
            android:textColorHint="#000"
            app:layout_constraintBottom_toTopOf="@+id/linear2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints"
            android:focusable="true" />

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="280dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/licencia_fecha"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/border_bottons"
                android:hint="Vencimiento Licencia Conducción"
                android:inputType="date"
                android:clickable="true"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="#000"
                android:focusable="false" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="#000"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_calendar"/>

        </LinearLayout>

        <Button
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="64dp"
            android:hint="Guardar Registro Conductor"
            android:textColorHint="#000"
            android:textSize="15sp"
            android:clickable="true"
            android:padding="10dp"
            android:background="@drawable/border_bottons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear2"
            tools:ignore="MissingConstraints"
            android:focusable="true" />

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="320dp"
            android:layout_height="3dp"
            android:background="@drawable/border_bottons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guardar"
            app:layout_constraintVertical_bias="0.296"
            tools:ignore="MissingConstraints"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout3"
            app:layout_constraintVertical_bias="0.972">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senasoft"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_1"
                android:textSize="18sp"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_2"
                android:textSize="18sp"
                android:textColor="#000" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>